--- a/Client/package.json
+++ b/Client/package.json
@@ -33,6 +33,8 @@
     "nodemon": "^2.0.20",
     "react-redux": "^8.0.5",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-css-modules": "^0.0.1",
+    "vite-plugin-sass": "^0.1.0"
   }
 }
